k8manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-revela-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"  
spec:
  ingressClassName: nginx  
  rules:
  - host: test.revelaservices.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-test
            port:
              number: 80
  tls:
  - hosts:
    - test.revelaservices.in
    secretName: revelaservices-tls
